added the README file

--- a/lab-1.ipynb
+++ b/lab-1.ipynb
@@ -193,6 +193,166 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['warning: LF will be replaced by CRLF in .ipynb_checkpoints/lab-1-checkpoint.ipynb.',\n",
+       " 'The file will have its original line endings in your working directory',\n",
+       " 'warning: LF will be replaced by CRLF in lab-1.ipynb.',\n",
+       " 'The file will have its original line endings in your working directory']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%!\n",
+    "git add ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```git add .```, este comando indica que queremos agregar todos los _blobs_ o _files_ que se encuentra en nuestro directorio, en caso que no necesitemos subir ciertos archivos tendremos que agregar a nivel de raíz superior un archivo llamado \".gitignore\" donde se indica que directorios o archivos no queremos que los tome en cuenta en los _snapshots_ y en el seguimiento de la historia."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['On branch master',\n",
+       " '',\n",
+       " 'No commits yet',\n",
+       " '',\n",
+       " 'Changes to be committed:',\n",
+       " '  (use \"git rm --cached <file>...\" to unstage)',\n",
+       " '\\tnew file:   .ipynb_checkpoints/lab-1-checkpoint.ipynb',\n",
+       " '\\tnew file:   lab-1.ipynb',\n",
+       " '',\n",
+       " 'Changes not staged for commit:',\n",
+       " '  (use \"git add <file>...\" to update what will be committed)',\n",
+       " '  (use \"git restore <file>...\" to discard changes in working directory)',\n",
+       " '\\tmodified:   lab-1.ipynb',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%!\n",
+    "git status"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```git status```, este comando permite visualizar el _snapshot_ antes de realizar un _commit_, es el área de preparación o ensayo, donde podemos determinar si en el _commit_ próximo todos los objetos o todos los objetos estarán en el mismo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['[master (root-commit) 131b6a9] the first commit, initialized git',\n",
+       " ' 2 files changed, 418 insertions(+)',\n",
+       " ' create mode 100644 .ipynb_checkpoints/lab-1-checkpoint.ipynb',\n",
+       " ' create mode 100644 lab-1.ipynb']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%!\n",
+    "git commit -m \"the first commit, initialized git\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```git commit -m \"text\"```, este comando es el que indica que los objetos que estaban en el área de preparación pasarán a ser el _commit_ principal o posterior a los demás, se adjunta un texto que será la __referencia__ para ubicarlo en la historia."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%!\n",
+    "git remote add origin https://github.com/hdtahay99/jupyter-git-markdown.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```git remote add origin URL_REPOSITORY```, este comando sirve para conectar e indicarle al a git que nuestro repositorio local será cargado a un repositorio en la nube, por la plataforma GitHub."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['To https://github.com/hdtahay99/jupyter-git-markdown.git',\n",
+       " ' * [new branch]      master -> master']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%!\n",
+    "git push origin master"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```git push origin branch```, este comando es el que hace posible cargar el repositorio local al que se indicó en el comando anterior, de tal forma el repositorio en GitHub tendrá una copia de nuestro repositorio local."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
