--- a/lab-1.ipynb
+++ b/lab-1.ipynb
@@ -348,15 +348,117 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```git push origin branch```, este comando es el que hace posible cargar el repositorio local al que se indicó en el comando anterior, de tal forma el repositorio en GitHub tendrá una copia de nuestro repositorio local."
+    "```git push origin branch```, este comando es el que hace posible cargar el repositorio local al que se indicó en el comando anterior, de tal forma el repositorio en GitHub tendrá una copia de nuestro repositorio local. Por lo general hay que indicarle el nombre de la __rama__, en este caso es __master__."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['warning: LF will be replaced by CRLF in .ipynb_checkpoints/lab-1-checkpoint.ipynb.',\n",
+       " 'The file will have its original line endings in your working directory',\n",
+       " 'warning: LF will be replaced by CRLF in lab-1.ipynb.',\n",
+       " 'The file will have its original line endings in your working directory',\n",
+       " 'warning: LF will be replaced by CRLF in .ipynb_checkpoints/README-checkpoint.md.',\n",
+       " 'The file will have its original line endings in your working directory',\n",
+       " 'warning: LF will be replaced by CRLF in README.md.',\n",
+       " 'The file will have its original line endings in your working directory']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%!\n",
+    "git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['[master 263a997] added the README file',\n",
+       " ' 4 files changed, 297 insertions(+)',\n",
+       " ' create mode 100644 .ipynb_checkpoints/README-checkpoint.md',\n",
+       " ' create mode 100644 README.md']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%! \n",
+    "git commit -am \"added the README file\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['To https://github.com/hdtahay99/jupyter-git-markdown.git',\n",
+       " '   131b6a9..263a997  master -> master']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%!\n",
+    "git push origin master"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```git push origin master```, es un comando que se utiliza para cargar al repositorio de GitHub los nuevos _snapshots_ del repositorio local, sin embargo para evitar escribir \"origin master\" cada vez, se puede utilizar el siguiente comando."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%!\n",
+    "git config push.default current"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lo anteri"
+   ]
   }
  ],
  "metadata": {
