added the latest command

--- a/lab-1.ipynb
+++ b/lab-1.ipynb
@@ -457,7 +457,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lo anteri"
+    "Lo anterior establece que las nuevas cargas, serán por defecto a la rama _master_ de nuestro repositorio remoto."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['warning: LF will be replaced by CRLF in lab-1.ipynb.',\n",
+       " 'The file will have its original line endings in your working directory',\n",
+       " '[master 049740c] new changes',\n",
+       " ' 1 file changed, 106 insertions(+), 4 deletions(-)']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%!\n",
+    "git commit -am \"new changes\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['To https://github.com/hdtahay99/jupyter-git-markdown.git',\n",
+       " '   263a997..049740c  master -> master']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%!\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En caso que necesitemos actualizar nuestro repositorio local de los cambios de alguien que haya colaborado, se puede utilizar ```git pull```"
    ]
   }
  ],
